# bot

./: .env.example  .gitignore  .pdm-python  Dockerfile  README.md  bot.py  pyproject.toml  user_operations.db
.github/workflows/: ci.yml  docker-image.yml
src/bot_stars/: commands.py  deepseek.py  keyboards.py  main.py  messages.py  repository.py  utils.py
src/bot_stars/data/: database.py  repositories.py
src/bot_stars/domain/: models.py
src/bot_stars/services/: user_service.py
tests/: conftest.py  factories.py  test_stars_preview.py
tests/integration/: test_stars_flow.py
tests/unit/: test_menu_switch.py  test_notification.py  test_repository.py  test_utils.py
