[project]
name = "bot-stars"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
dependencies = [
    "python-telegram-bot>=21.10",
    "python-dotenv>=1.0.1",
    "rushdb>=0.3.0",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "pymorphy2>=0.9.1",
    "setuptools>=76.1.0",
    "natasha>=1.6.0",
    "russian-tagsets>=0.6",
]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start = "python -m bot_stars.main"
test = "pytest tests"

[tool.pdm]
distribution = true
package-dir = "src"